--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "js-base64": "^3.6.0",
         "nodemon": "^2.0.7"
     }
 }
